<resources>
    <string name="app_name">ProjectRemnant</string>

    //Authentication strings -----------
    <string name="authentication_activity_btn_login">Login</string>
    <string name="authentication_activity_btn_signup">Sign-up</string>

    //Signup strings -----------
    <string name="signup_activity_et_username">Username:</string>
    <string name="signup_activity_et_password">Password:</string>
    <string name="signup_activity_et_confirmPassword">Confirm Password:</string>
    <string name="signup_activity_btn_create">Create Account</string>

    <string name="signup_activity_toast_passwordsNotMatching">The passwords you entered do not match, please re-enter them.</string>


    //Login strings -----------
    <string name="login_activity_btn_login">Login</string>

    <string name="login_activity_toast_accountNotFound">No account associated with that username.</string>
    <string name="login_activity_toast_loginFailed">Login failed. Username or Password is wrong.</string>


    //Checklist strings -----------
    <string name="checklist_activity_title_armor">Viewing Armor Sets</string>
    <string name="checklist_activity_title_weapon">Viewing Weapons</string>
    <string name="checklist_activity_title_ring">Viewing Rings</string>
    <string name="checklist_activity_title_trait">Viewing Traits</string>
    <string name="checklist_activity_title_mod">Viewing Mods</string>
    <string name="checklist_activity_title_amulets">Viewing Amulets</string>
    <string name="checklist_activity_title_default">Checklist</string>

    <string name="checklist_activity_menu_search">Search</string>

    <string name="checklist_activity_alert_search">Search</string>
    <string name="checklist_activity_alert_create">Create</string>
    <string name="checklist_activity_alert_cancel">Cancel</string>
    <string name="checklist_activity_alert_title">Session Finder</string>
    <string name="checklist_activity_alert_message">Welcome to the Session Finder, here you can search for any sessions that are already up, or create your own.</string>


    //Item strings -----------
    <string name="item_details_activity_category_amulet">Amulet</string>
    <string name="item_details_activity_category_mod">Mod</string>
    <string name="item_details_activity_category_ring">Ring</string>
    <string name="item_details_activity_category_trait">Trait</string>
    <string name="item_details_activity_category_armor">Armor Set</string>
    <string name="item_details_activity_category_weapon">Weapon</string>

    <string name="item_details_activity_title_itemBonus">Item Bonus</string>
    <string name="item_details_activity_title_itemCriteria">Item Unlock Criteria</string>

    <string name="item_details_activity_button_view">View WikiPage</string>
    <string name="item_details_activity_checkbox_itemOwned">Item Owned</string>

    //Character strings -----------
    <string name="character_activity_menu_add">Add</string>
    <string name="character_form_menu_save">Save</string>

    <string name="character_activity_empty_data">No characters found, please touch the plus button to create a character to start tracking.</string>

    <string name="character_activity_form_gamertag">Gamertag:</string>
    <string name="character_activity_form_platform">Platform:</string>
    <string name="character_activity_form_nickname">Nickname:</string>
    <string name="character_activity_form_traitRank">Trait Rank:</string>

    //Session strings -----------
    <string name="session_activity_form_hint_name">Session Name:</string>
    <string name="session_activity_form_hint_description">Session Description:</string>
    <string name="session_activity_form_hint_playerlimit">Player Limit:</string>
    
    <string-array name="session_playerLimit_spinnerOptions">
        <item>2</item>
        <item>3</item>
    </string-array>


</resources>
